@@ -9344,12 +9344,7 @@ var
           SortGlyphPos, SortGlyphSize, TextRectangle, DrawFormat);
 
         // Move glyph and text one pixel to the right and down to simulate a pressed button.
-        if IsDownIndex 
-          // Fix for distorted column caption during dragging of the column header.
-          // During the drag, keep painting the pressed state of column header
-          // so that the slice of header caption image copied for backup by FDragImage
-          // object matches and aligns with the non-sliced header caption part.
-          or ((hsDragging in FHeader.States) and (FDragIndex = AColumn)) then
+        if IsDownIndex then
         begin
           OffsetRect(TextRectangle, 1, 1);
           Inc(GlyphPos.X);
@@ -10354,6 +10349,12 @@ begin
   end;
 
   FDragImage.DragTo(P, NeedRepaint);
+
+  //Issue #248: Fix for all column header dragging problems. Since a drag disturbs
+  //the header, better to repaint just the header rect after the drag unless a
+  //repaint has already been done above.
+  if not NeedRepaint then
+    Invalidate(nil); //nil means just the header rect
 end;
 
 //----------------------------------------------------------------------------------------------------------------------
